syntax = "proto3";
package nicholasdotsol.duality.dex;

import "gogoproto/gogo.proto";
import "dex/params.proto";
import "dex/tick_map.proto";
import "dex/trading_pair.proto";
import "dex/tokens.proto";
import "dex/token_map.proto";
import "dex/shares.proto";
import "dex/fee_tier.proto";
import "dex/edge_row.proto";
import "dex/adjancey_matrix.proto";
import "dex/limit_order_tranche_user.proto";
import "dex/limit_order_tranche.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

// GenesisState defines the dex module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated TickMap tickMapList = 2 [(gogoproto.nullable) = false];
  repeated TradingPair TradingPairList = 3 [(gogoproto.nullable) = false];
  repeated Tokens tokensList = 4 [(gogoproto.nullable) = false];
  uint64 tokensCount = 5;
  repeated TokenMap tokenMapList = 6 [(gogoproto.nullable) = false];
  repeated Shares sharesList = 7 [(gogoproto.nullable) = false];
  repeated FeeTier FeeTierList = 8 [(gogoproto.nullable) = false];
  uint64 FeeTierCount = 9;
  repeated EdgeRow edgeRowList = 10 [(gogoproto.nullable) = false];
  uint64 edgeRowCount = 11;
  repeated AdjanceyMatrix adjanceyMatrixList = 12 [(gogoproto.nullable) = false];
  uint64 adjanceyMatrixCount = 13;
  repeated LimitOrderTrancheUser LimitOrderTrancheUserList = 14 [(gogoproto.nullable) = false];
  repeated LimitOrderTranche LimitOrderTrancheList = 15 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
